--- a/frontend/event-booking-system/package.json
+++ b/frontend/event-booking-system/package.json
@@ -14,10 +14,12 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "@types/react-signature-canvas": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
+    "react-signature-canvas": "^1.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
