--- a/frontend/event-booking-system/package.json
+++ b/frontend/event-booking-system/package.json
@@ -15,6 +15,9 @@
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@types/react-signature-canvas": "^1.0.2",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0",
@@ -42,7 +45,8 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^8.1.0"
+    "concurrently": "^8.1.0",
+    "crypto-js": "^4.1.1"
   },
   "proxy": "http://localhost:5000"
 }
