--- a/frontend/event-booking-system/package.json
+++ b/frontend/event-booking-system/package.json
@@ -18,8 +18,10 @@
     "@types/react-signature-canvas": "^1.0.2",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
@@ -46,8 +48,11 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
+    "@types/react-csv": "^1.1.10",
     "concurrently": "^8.1.0",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "i": "^0.3.7"
   },
   "proxy": "http://localhost:5000"
 }
