--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,12 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "file-saver": "^2.0.5",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.1",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-signature-canvas": "^1.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
