--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-signature-canvas": "^1.0.2",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "dseg": "^0.46.0",
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.1",
     "react": "^18.2.0",
