configure deployment pipeline

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,14 +7,21 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y gcc libpq-dev curl && rm -rf /var/lib/apt/lists/*
 
 # Copy code and install Python deps
-COPY server/requirements.txt .
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy backend source
-COPY server/ .
+COPY . .
+
+# Create necessary directories
+RUN mkdir -p logs db
 
 # Expose Flask port
 EXPOSE 5000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
+  CMD curl -f http://localhost:5000/api/health || exit 1
 
 # Run Flask via Gunicorn
 CMD ["gunicorn", "-b", "0.0.0.0:5000", "wsgi:app"]
