--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,24 @@
-version: "3.9"
+version: '3.8'
 
 services:
-  server:
-    build:
-      context: .
-      dockerfile: server/Dockerfile
-    env_file: ./server/.env
-    ports:
-      - "5000:5000"
-    volumes:
-      - ./server:/app
+  backend:
+    image: ghcr.io/${{ github.repository_owner }}/wiesenwahn-backend:latest
     restart: always
-    depends_on:
-      - frontend
+    volumes:
+      - ./data:/app/db
+      - ./logs:/app/logs
+    environment:
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - PASSWORD=${USER_PASSWORD}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - GMAIL_USER=${GMAIL_USER}
+      - GMAIL_PASS=${GMAIL_PASS}
+    # Not exposed to outside world, only to frontend and within Docker network
 
   frontend:
-    build:
-      context: .
-      dockerfile: frontend/Dockerfile
-    ports:
-      - "80:80"
+    image: ghcr.io/${{ github.repository_owner }}/wiesenwahn-frontend:latest
     restart: always
+    ports:
+      - "8080:80"  # Exposed only on localhost for Nginx to proxy
+    depends_on:
+      - backend
