--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:20 as build
 
 WORKDIR /app
-COPY frontend/ .
+COPY . .
 RUN npm install
 RUN npm run build
 
-# Serve frontend with nginx
+# Serve frontend with nginx (without SSL)
 FROM nginx:stable-alpine
 COPY --from=build /app/build /usr/share/nginx/html
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
