--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    server_name wiesenwahn.de;
-
+    server_name localhost;
+    
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
@@ -9,7 +9,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://server:5000/api/;
+        proxy_pass http://backend:5000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
