--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -39,6 +40,11 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.REPO_OWNER_LOWERCASE }}/wiesenwahn-frontend:latest
 
+      - name: Prepare docker-compose.yml with environment variables
+        run: |
+          # Replace variables in docker-compose.yml
+          sed -i 's/\${{ github.repository_owner }}/${{ env.REPO_OWNER_LOWERCASE }}/g' docker-compose.yml
+
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -49,38 +55,27 @@ jobs:
           script: |
             # Create deployment directory if it doesn't exist
             mkdir -p /opt/wiesenwahn
+            mkdir -p /opt/wiesenwahn/data
+            mkdir -p /opt/wiesenwahn/logs
             
-            # Create docker-compose file
-            cat > /opt/wiesenwahn/docker-compose.yml << 'EOL'
-            version: '3.8'
-            
-            services:
-              backend:
-                image: ghcr.io/${{ env.REPO_OWNER_LOWERCASE }}/wiesenwahn-backend:latest
-                restart: always
-                ports:
-                  - "127.0.0.1:5001:5001"
-                volumes:
-                  - ./data/bookings.db:/app/db/bookings.db
-                  - ./logs:/app/logs
-                environment:
-                  - JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
-                  - PASSWORD=${{ secrets.USER_PASSWORD }}
-                  - ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}
-                  - GMAIL_USER=${{ secrets.GMAIL_USER }}
-                  - GMAIL_PASS=${{ secrets.GMAIL_PASS }}
-            
-              frontend:
-                image: ghcr.io/${{ env.REPO_OWNER_LOWERCASE }}/wiesenwahn-frontend:latest
-                restart: always
-                ports:
-                  - "8080:80"  # Exposed only on localhost for Nginx to proxy
-                depends_on:
-                  - backend
-            EOL
+            # Create an empty database file if it doesn't exist
+            if [ ! -f /opt/wiesenwahn/data/bookings.db ]; then
+              touch /opt/wiesenwahn/data/bookings.db
+              chmod 666 /opt/wiesenwahn/data/bookings.db
+            fi
             
             # Backup the database before updating
             bash /opt/wiesenwahn/backup.sh deploy-backup || true
+            
+            # Create .env file with secrets
+            cat > /opt/wiesenwahn/.env << EOL
+            JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
+            USER_PASSWORD=${{ secrets.USER_PASSWORD }}
+            ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}
+            ARTIST_PASSWORD=${{ secrets.ARTIST_PASSWORD }}
+            GMAIL_USER=${{ secrets.GMAIL_USER }}
+            GMAIL_PASS=${{ secrets.GMAIL_PASS }}
+            EOL
             
             # Pull latest images
             cd /opt/wiesenwahn
@@ -92,3 +87,14 @@ jobs:
             
             # Clean up old images
             docker image prune -af
+
+      - name: Copy docker-compose.yml to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          port: ${{ secrets.SERVER_PORT }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "docker-compose.yml"
+          target: "/opt/wiesenwahn/"
+          overwrite: true
